use pulp for linear programming solver

--- a/Experimenting.ipynb
+++ b/Experimenting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /Users/coby.lu/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
@@ -5494,6 +5494,261 @@
    ],
    "source": [
     "result.slack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pulp import *\n",
+    "from scipy.optimize import linprog\n",
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similarity(df):\n",
+    "    nlp = spacy.load(\"en_core_web_md\")\n",
+    "    stop_lemmas = set(['\\n', '\\n\\n', ' ', '!', '\"', '&', \"'\", '(', ')', '+', ',', \n",
+    "    '-', '--', '-PRON-', '.', '..', '...', '/', ':', ':)', ';', '>', '?','_', 'a', \n",
+    "    'an', 'also', 'candy', 'color', 'enjoy', 'favorite', 'hobby', 'honestly', 'i',\n",
+    "    'interested', 'interesting', 'into', 'like', 'love', 'lover', 'need', \n",
+    "    'preferably','obsessed','really'])\n",
+    "\n",
+    "    corpus = df[\"List 4 facts about yourself to help your secret snowflake find the perfect gift for you! \"]\n",
+    "    spacy_corpus = corpus.apply(nlp)\n",
+    "    for i, sentence in enumerate(spacy_corpus):\n",
+    "        new_sentence = []\n",
+    "        for word in sentence:\n",
+    "            if not word.is_stop and str(word.lemma_) not in stop_lemmas:\n",
+    "                new_sentence.append(str(word.lemma_))\n",
+    "        df.loc[i, \"interests (cleaned)\"] = \" \".join(new_sentence)\n",
+    "\n",
+    "    corpus = df[\"interests (cleaned)\"]\n",
+    "    spacy_corpus = corpus.apply(nlp)\n",
+    "    spacy_similarity = np.zeros((len(spacy_corpus), len(spacy_corpus)))\n",
+    "    for (i, doc) in enumerate(spacy_corpus):\n",
+    "        for (j, other_doc) in enumerate(spacy_corpus):\n",
+    "            spacy_similarity[i, j] = doc.similarity(other_doc)\n",
+    "    \n",
+    "    return -spacy_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Engineering Secret Snowflake 2019 (Responses) - Form Responses 1.csv\")\n",
+    "going = df.loc[df[\"Do you want to participate in Engineering's Secret Snowflake?\"] == \"Yes\", [\"Email Address\", \"List 4 facts about yourself to help your secret snowflake find the perfect gift for you! \"]].reset_index(drop=True)\n",
+    "\n",
+    "interest_similarity = similarity(going)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_people = interest_similarity.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize(similarity):\n",
+    "    num_people = similarity.shape[0]\n",
+    "    print(f\"num people1: {num_people}\")\n",
+    "\n",
+    "    lp_vars = []\n",
+    "    c = []\n",
+    "    for i in range(num_people):\n",
+    "        for j in range(num_people):\n",
+    "            lp_vars.append(LpVariable(f\"g_{i}_r_{j}\", lowBound = 0, upBound = 1, cat=LpInteger))\n",
+    "            c.append(similarity[i][j] if i != j else 99999)\n",
+    "    \n",
+    "    prob = LpProblem(\"snowflake\", LpMinimize)\n",
+    "    \n",
+    "    # minimization function\n",
+    "    prob += lpDot(c, lp_vars)\n",
+    "\n",
+    "    # give only 1\n",
+    "    for i in range(num_people):\n",
+    "        prob += lpSum([lp_vars[i] for i in range(i * num_people, (i + 1) * num_people)]) == 1\n",
+    "\n",
+    "    # receive only 1\n",
+    "    for i in range(num_people):\n",
+    "        prob += lpSum([lp_vars[i] for i in range(i, num_people ** 2, num_people)]) == 1\n",
+    "\n",
+    "    # don't give and receive to the same person\n",
+    "    for comb in combinations(range(num_people), 2):\n",
+    "        prob += lp_vars[comb[0] * num_people + comb[1]] + lp_vars[comb[1] * num_people + comb[0]] <= 1\n",
+    "        \n",
+    "    return lp_vars, prob.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num people1: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "lp_vars, result = optimize(interest_similarity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_LpElement__name': 'g_0_r_17', 'hash': 5084085968, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.77052935, 'init': 0}\n",
+      "{'_LpElement__name': 'g_1_r_30', 'hash': 5094771280, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.75230492, 'init': 0}\n",
+      "{'_LpElement__name': 'g_2_r_23', 'hash': 5094956048, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73626886, 'init': 0}\n",
+      "{'_LpElement__name': 'g_3_r_10', 'hash': 5094755024, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.75869693, 'init': 0}\n",
+      "{'_LpElement__name': 'g_4_r_40', 'hash': 5094760272, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.68513992, 'init': 0}\n",
+      "{'_LpElement__name': 'g_5_r_13', 'hash': 5094831888, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73298947, 'init': 0}\n",
+      "{'_LpElement__name': 'g_6_r_36', 'hash': 5094914064, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.4780443, 'init': 0}\n",
+      "{'_LpElement__name': 'g_7_r_6', 'hash': 5094915600, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.32205527, 'init': 0}\n",
+      "{'_LpElement__name': 'g_8_r_37', 'hash': 5094910096, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83017431, 'init': 0}\n",
+      "{'_LpElement__name': 'g_9_r_38', 'hash': 5094940240, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.67626711, 'init': 0}\n",
+      "{'_LpElement__name': 'g_10_r_11', 'hash': 5094974992, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.84194494, 'init': 0}\n",
+      "{'_LpElement__name': 'g_11_r_24', 'hash': 5845299728, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.84220178, 'init': 0}\n",
+      "{'_LpElement__name': 'g_12_r_15', 'hash': 5845193424, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.84545521, 'init': 0}\n",
+      "{'_LpElement__name': 'g_13_r_27', 'hash': 5845229072, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83913982, 'init': 0}\n",
+      "{'_LpElement__name': 'g_14_r_20', 'hash': 5845188560, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73971079, 'init': 0}\n",
+      "{'_LpElement__name': 'g_15_r_19', 'hash': 5845169360, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.86065672, 'init': 0}\n",
+      "{'_LpElement__name': 'g_16_r_8', 'hash': 5845165200, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.84697069, 'init': 0}\n",
+      "{'_LpElement__name': 'g_17_r_32', 'hash': 5845181968, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73557672, 'init': 0}\n",
+      "{'_LpElement__name': 'g_18_r_3', 'hash': 5845183632, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.74292501, 'init': 0}\n",
+      "{'_LpElement__name': 'g_19_r_12', 'hash': 5845116560, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.89237612, 'init': 0}\n",
+      "{'_LpElement__name': 'g_20_r_7', 'hash': 5845256528, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.79943937, 'init': 0}\n",
+      "{'_LpElement__name': 'g_21_r_29', 'hash': 4920871376, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73631366, 'init': 0}\n",
+      "{'_LpElement__name': 'g_22_r_21', 'hash': 4920716048, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.89093173, 'init': 0}\n",
+      "{'_LpElement__name': 'g_23_r_9', 'hash': 4920916560, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.69784372, 'init': 0}\n",
+      "{'_LpElement__name': 'g_24_r_26', 'hash': 4920862992, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.88806228, 'init': 0}\n",
+      "{'_LpElement__name': 'g_25_r_16', 'hash': 4920891280, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.78766919, 'init': 0}\n",
+      "{'_LpElement__name': 'g_26_r_41', 'hash': 4920833424, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83223239, 'init': 0}\n",
+      "{'_LpElement__name': 'g_27_r_31', 'hash': 4920841552, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.85218911, 'init': 0}\n",
+      "{'_LpElement__name': 'g_28_r_35', 'hash': 4920774096, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.90536191, 'init': 0}\n",
+      "{'_LpElement__name': 'g_29_r_18', 'hash': 4920770896, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.6839779, 'init': 0}\n",
+      "{'_LpElement__name': 'g_30_r_33', 'hash': 4920878160, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83959104, 'init': 0}\n",
+      "{'_LpElement__name': 'g_31_r_25', 'hash': 4920800016, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.80605586, 'init': 0}\n",
+      "{'_LpElement__name': 'g_32_r_28', 'hash': 4920810512, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.79513212, 'init': 0}\n",
+      "{'_LpElement__name': 'g_33_r_1', 'hash': 4920808592, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.75480936, 'init': 0}\n",
+      "{'_LpElement__name': 'g_34_r_22', 'hash': 4920820880, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83899538, 'init': 0}\n",
+      "{'_LpElement__name': 'g_35_r_39', 'hash': 5864917392, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.83383503, 'init': 0}\n",
+      "{'_LpElement__name': 'g_36_r_0', 'hash': 5864917776, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.68806412, 'init': 0}\n",
+      "{'_LpElement__name': 'g_37_r_14', 'hash': 5864769424, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.77130344, 'init': 0}\n",
+      "{'_LpElement__name': 'g_38_r_34', 'hash': 5864986384, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.73215167, 'init': 0}\n",
+      "{'_LpElement__name': 'g_39_r_2', 'hash': 5864987664, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.78303226, 'init': 0}\n",
+      "{'_LpElement__name': 'g_40_r_5', 'hash': 5865009936, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.62183685, 'init': 0}\n",
+      "{'_LpElement__name': 'g_41_r_4', 'hash': 5864972112, 'modified': True, 'lowBound': 0, 'upBound': 1, 'cat': 'Integer', 'varValue': 1.0, 'dj': -0.77401066, 'init': 0}\n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for v in lp_vars:\n",
+    "    if v.varValue > 0.9:\n",
+    "        print(v.__dict__)\n",
+    "        count += 1\n",
+    "        \n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(LpStatus[result])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hobbies: video games - Pokemon, Animal Crossing- plushies are awesome\\r\\nCandy/Color: Sour Candy/Blue- sour patch kids/sour punch straws'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "going.loc[2, \"List 4 facts about yourself to help your secret snowflake find the perfect gift for you! \"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal\n",
+      "42 number of snowflakes matched\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "print(LpStatus[result])\n",
+    "members = going[\"Email Address\"]\n",
+    "num_people = len(members)\n",
+    "check = 0\n",
+    "matching = pd.DataFrame(columns = [\"Giver\", \"Receiver\", \"Giver's interests\", \"Receiver's Interests\"])\n",
+    "for i, g in enumerate(members):\n",
+    "    for j, r in enumerate(members):\n",
+    "        if lp_vars[i * num_people + j].varValue  >= 0.95:\n",
+    "            matching = matching.append({\"Giver\": g, \"Receiver\": r, \"Giver's interests\": going.loc[i, \"List 4 facts about yourself to help your secret snowflake find the perfect gift for you! \"], \"Receiver's Interests\": going.loc[j, \"List 4 facts about yourself to help your secret snowflake find the perfect gift for you! \"]}, ignore_index = True)\n",
+    "            check += 1\n",
+    "matching.to_csv(\"matching.csv\",index = False, quoting=csv.QUOTE_ALL)\n",
+    "print(f\"{check} number of snowflakes matched\")"
    ]
   },
   {
